# kickstarter

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  app.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.sh  sitemap.xml
.github/workflows/: ci.yml
charts/inter_list/: index.html
charts/tabletop_games_1/: index.html
charts/tabletop_games_2/: index.html
charts/tabletop_games_3/: index.html
charts/tabletop_games_4/: index.html
charts/tabletop_games_5/: index.html
charts/timeline/: index.html
charts/top25pledged/: index.html
charts/top25successful/: index.html
charts/top_ten_2020_games/: index.html
charts/top_ten_all_the_time_projects/: index.html
docs/: index.md
docs/charts/: inter_list.md  tabletop_games_1.md  tabletop_games_2.md  tabletop_games_3.md  tabletop_games_4.md  tabletop_games_5.md  timeline.md  top25pledged.md  top25successful.md  top_ten_2020_games.md  top_ten_all_the_time_projects.md
jsons/: inter_list.json  tabletop_games_1.json  tabletop_games_2.json  tabletop_games_3.json  tabletop_games_4.json  tabletop_games_5.json  timeline.json  top25pledged.json  top25successful.json  top_ten_2020_games.json  top_ten_all_the_time_projects.json  topcategories.json
kickstarter/: __main__.py  core.py  main.py
kickstarter/data_extraction/: preprocess.py
kickstarter/models/: __init__.py  category_model.py  creator_model.py  project_model.py
kickstarter/processing/: __init__.py  base_process.py  monthly_categories_success.py  monthly_categories_total.py  tabletop_games.py  top_grossing_categories.py  top_successful_categories.py  util.py
tests/: test_requirements.py
website/: index.html
