[tool.poetry]
name = "kickstarter"
version = "1.1.0"
description = ""
authors = ["leynier <leynier41@gmail.com>"]
homepage = "https://github.com/codestrange/kickstarter"
repository = "https://github.com/codestrange/kickstarter"
documentation = "https://github.com/codestrange/kickstarter"
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
kickstarter = "kickstarter.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"
streamlit = "^0.88.0"
pydantic = "^1.8.2"
plotly = "^5.3.1"
scipy = "^1.5.4"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^3.9.2"
black = "^21.9b0"
isort = "^5.9.3"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
