[tool.poetry]
name = "kickstarter"
version = "1.1.0"
description = ""
authors = ["leynier <leynier41@gmail.com>"]
homepage = "https://github.com/codestrange/kickstarter"
repository = "https://github.com/codestrange/kickstarter"
documentation = "https://github.com/codestrange/kickstarter"
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
kickstarter = "kickstarter.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"
streamlit = "^1.7.0"
pydantic = "^1.9.0"
plotly = "^5.6.0"
scipy = "^1.5.4"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
flake8 = "^4.0.1"
black = "^22.1"
isort = "^5.10.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
